--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,21 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+  <!-- Header Section -->
+  <div class="header-container container">
+    <a href="./index.html" class="logo-link link"
+      ><svg width="50" height="53">
+        <use href="../img/icons.svg#icon-logo"></use></svg
+      >Canvas Lancer</a
+    >
+    <nav class="navigation">
+      <ul class="nav-list list">
+        <li><a href="" class="list-link link">About Us</a></li>
+        <li><a href="" class="list-link link">Home</a></li>
+        <li><a href="" class="list-link link">Services</a></li>
+        <li><a href="" class="list-link link">Portfolio</a></li>
+        <li><a href="" class="list-link link">Testimonials</a></li>
+        <li><a href="" class="list-link link">Faqs</a></li>
+      </ul>
+    </nav>
+    <button type="button" class="header-btn button">Contact Us</button>
+  </div>
 </header>
