--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,40 @@
-.header {
-  padding: 20px 0;
-}
-
-.nav-list {
+.header-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+}
+.navigation {
+  display: flex;
+}
+.logo-link {
+  display: flex;
+  align-items: center;
+  color: var(--main-white);
+  font-family: 'Inter';
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1.2;
+}
+.nav-list {
+  display: flex;
   gap: 40px;
 }
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
+.list-link {
+  color: var(--main-white);
+  font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.03em;
+  display: block;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.header-btn {
+  color: var(--main-white);
+  background-color: var(--accent-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 18px;
 }
