--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,21 @@
-<section class="hero-section">
-  <p class="hero-text">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, eos!
-  </p>
+<section class="hero">
+  <div class="hero-container container">
+    <p class="hero-subtitle">
+      Welcome To <span class="subtitle-accent">Canavas Lancer</span>
+    </p>
+    <h1 class="hero-title">Designing the Future with Canvas Lancer</h1>
+    <p class="hero-deskr">
+      Lorem ipsum dolor sit amet consectetur. Aliquam quisque cursus proin
+      adipiscing quis diam. Eu fringilla elit commodo nec aliquet. Augue
+      pharetra nibh co
+    </p>
+    <ul class="hero-list list">
+      <li>
+        <button class="accent-btn hire-btn" type="button">Hire Us</button>
+      </li>
+      <li>
+        <button class="hero-second-btn" type="button">View Portfolio</button>
+      </li>
+    </ul>
+  </div>
 </section>
